finish bootstrap column work

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4 col-sm-3">
+        <div class="col-xs-12 col-sm-4">
           <h3>Company Brand</h3>
         </div>
-        <div class="col-xs-4 clearfix col-sm-3 col-sm-offset-3 col-lg-offset-5">
+        <div class="col-xs-12 col-sm-3 col-sm-offset-2 col-lg-offset-5">
           <ul>
             <li>About</li>
             <li>Contact</li>
@@ -25,29 +25,37 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
-          <img src="#" alt="" />
+        <div class="col-sm-6 col-lg-3">
+          <div class="image">
+            <img src="img/mountain.jpg" alt="" />
+          </div>
           <h5>Description</h5>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
         </div>
-        <div class="col-sm-6">
-          <img src="#" alt="" />
+        <div class="col-sm-6 col-lg-3">
+          <div class="image">
+            <img src="img/desert.jpg" alt="" />
+          </div>
           <h5>Description</h5>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
         </div>
-        <div class="col-sm-6">
-          <img src="#" alt="" />
+        <div class="col-sm-6 col-lg-3">
+          <div class="image">
+            <img src="img/forest.jpg" alt="" />
+          </div>
           <h5>Description</h5>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
         </div>
-        <div class="col-sm-6">
-          <img src="#" alt="" />
+        <div class="col-sm-6 col-lg-3">
+          <div class="image">
+            <img src="img/ocean.jpg" alt="" />
+          </div>
           <h5>Description</h5>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
